* Fix `ExecutionEnvironment.args` being empty on Linux
* Add various useful functions to interrogatedb module
* Fix Python 3 issues unpacking uint types in Python 3 (#1380)
* Fix interrogate syntax error with C++11-style attributes in declarators
* Fix regression with BufferViewer in double-precision build (#1365)
* Fix `PandaNode.nested_vertices` not updating properly
* Add `do_events()` and `process_event()` snake_case aliases in eventMgr
* Support second arg of None in `replace_texture()` / `replace_material()`
* Support `os.fspath()` for ConfigVariableFilename objects (#1406)
* rplight: Fix PSSM calculation failing with infinite far distance (#1397)
* Remove spurious print in `direct.showutil.Effects.createBounce()` (#1383)
* Fix assorted compiler warnings

-----------------------  RELEASE 1.10.12  -----------------------

Recommended maintenance release containing primarily bug fixes.

Windowing
* Windows: Fix origin not respected when switching to windowed mode
* macOS: Fix origin not being updated when resizing window
* macOS: Fix off-by-one errors with mouse cursor position
* macOS: Fix issues with confined mouse mode
* macOS: Fix events being suppressed when moving the mouse pointer
* macOS: Invert horizontal scroll, set `cocoa-invert-wheel-x true` to revert

Rendering
* Add `shadow-cube-map-filter` setting to enable cube map shadow filtering
* Support floating-point FBOs in OpenGL ES 2+
* Fix texture format selection in OpenGL with T_half_float component type
* Added `egl-device-index` config var to select EGL device
* Offscreen windows in tinydisplay renderer are now resizeable
* CommonFilters now supports alternative coordinate systems
* Fix BufferViewer frame when using a different coordinate system

Deployment
* Fix _bootlocale error in deployed application on Windows with Python 3.10
* Include _sysconfigdata module properly when using sysconfig module
* Fix building deploy-stub on platforms that use DT_RUNPATH instead of DT_RPATH